--- a/01_VAE_original/example.ipynb
+++ b/01_VAE_original/example.ipynb
@@ -41,7 +41,32 @@
      "name": "stdout",
      "text": [
       "tensorflow backend\n",
-      "vae stuff\n",
+      "vae stuff\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:523: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:524: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:532: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
       "iport scientific py\n",
       "rdkit stuff\n",
       "plotting stuff\n"
@@ -59,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "vae = VAEUtils(directory='models/zinc_properties')"
    ],
@@ -101,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "source": [
     "smiles_1 = mu.canon_smiles('c1ccccc1')\r\n",
     "\r\n",
@@ -111,8 +136,8 @@
     "\r\n",
     "print('{:20s} : {}'.format('Input',smiles_1))\r\n",
     "print('{:20s} : {}'.format('Reconstruction',vae.hot_to_smiles(X_r,strip=True)[0]))\r\n",
-    "\r\n",
-    "print('{:20s} : {} with norm {:.3f}'.format('Z representation',z_1.shape, np.linalg.norm(z_1)))"
+    "print('{:20s} : {} with norm {:.3f}'.format('Z representation',z_1.shape, np.linalg.norm(z_1)))\r\n",
+    "# print(z_1)"
    ],
    "outputs": [
     {
@@ -120,8 +145,41 @@
      "name": "stdout",
      "text": [
       "Input                : c1ccccc1\n",
-      "Reconstruction       : c1cccccc1\n",
-      "Z representation     : (1, 196) with norm 12.224\n"
+      "Reconstruction       : Fc1ccccc1OCOC(\n",
+      "Z representation     : (1, 196) with norm 12.216\n",
+      "[[-0.77691247  0.85882807 -0.44760311  1.42539011  0.01080741  0.47623664\n",
+      "  -1.79404222 -0.25234241  1.29972129 -1.25165935  0.46670776 -0.66059132\n",
+      "   0.31917993 -1.27116825 -1.71836215  0.33949863 -0.55761879 -0.11884767\n",
+      "   1.28282011 -1.07083934 -0.22369312 -0.12928893 -0.57709073  0.97884067\n",
+      "  -0.10821222  0.74964477 -0.58405038 -0.36507275  0.75152057  0.93259306\n",
+      "  -0.83165664 -0.5486327   0.55401731  0.58158805 -0.32189768 -1.64018346\n",
+      "   0.04432136 -0.32907026 -1.60355907 -0.32513311 -1.69003329 -0.65187205\n",
+      "   0.78100092  0.72093741  0.91144383  0.5166204   0.09846786 -0.29645276\n",
+      "   2.71204159  1.38990597 -1.06040201  0.23293988  0.05963608 -0.35245194\n",
+      "  -0.0862902   1.80864847  0.47366582  0.05502738 -0.04904005 -0.98173224\n",
+      "   2.5358746  -0.56289267 -0.36588563 -0.58572402 -0.77610435  0.89394072\n",
+      "  -0.91692297  1.47423123 -1.44693552 -0.73632022  0.82211355 -0.2209308\n",
+      "   0.45916467  0.16412013  0.59637497  0.0205101   0.46830319  1.24139578\n",
+      "  -0.34772708 -0.75341054  1.36160317 -1.06513957  0.39893089 -0.56662849\n",
+      "  -0.49805625 -0.49041232 -1.14797981  0.18518061  0.04978471 -0.98767926\n",
+      "  -0.54277244  0.30099173 -0.49318639  0.38800052 -0.89795587 -0.29452963\n",
+      "   0.68657033  0.48279616 -1.34798175  0.62823789  0.25438472  0.46266851\n",
+      "   0.34460507  0.74489345 -0.80920575 -0.11424691  0.52661719  0.53276262\n",
+      "  -0.17814536 -0.7608357   0.98717899 -0.01228144 -0.73128006 -1.31980217\n",
+      "   0.01029713  0.55025099  0.65926897 -0.28605459  0.17356158  1.34588085\n",
+      "  -1.34753774  0.01741454  0.42958169 -0.29851405  1.17936566  1.41709136\n",
+      "   0.19173529 -0.40994566 -0.46783556  1.53802173  0.25601512  0.55691539\n",
+      "  -0.33837242 -0.39625222  0.49722577 -0.64195573  0.21587302 -0.70763108\n",
+      "  -0.77591923  0.60275974  1.23720154 -1.03767387  0.48373662 -1.89299418\n",
+      "  -1.28216836 -1.77600992  0.61294346 -0.42039627  0.10736811  0.36953577\n",
+      "   0.01947931 -0.98925091  0.57227038  0.23325911 -1.60356674  1.61054929\n",
+      "  -0.44173982 -0.38616401 -0.50483727 -0.2510918   1.48162744 -0.21505971\n",
+      "  -0.41253476 -1.5445715   0.98867645 -0.39311106 -0.6038621   0.9786048\n",
+      "   0.02201979 -0.11426762  0.18130444  0.38778064 -1.47363828  0.80437244\n",
+      "  -1.8396613   0.0067515  -1.40765783  1.2649628   0.12200382  0.02013995\n",
+      "   1.03052812  0.08738468 -0.33935936 -1.79232425  0.83612517 -0.12819222\n",
+      "   0.17156254 -0.71107471  1.39930166  0.38758192  1.21968037  0.4895826\n",
+      "  -1.61989692 -0.89169584 -0.74833265 -0.2373991 ]]\n"
      ]
     }
    ],
@@ -136,10 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "source": [
     "print('Properties (qed,SAS,logP):')\r\n",
-    "y_1 = vae.predict_prop_Z(z_1)[0]\r\n",
+    "y_1 = vae.predict_prop_Z(z_1)\r\n",
     "print(y_1)"
    ],
    "outputs": [
@@ -147,8 +205,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Properties (qed,SAS,logP):\n",
-      "[0.6280591 2.285547  1.039958 ]\n"
+      "Properties (qed,SAS,logP):\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'vae' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-6a960a7354c3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Properties (qed,SAS,logP):'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0my_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvae\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict_prop_Z\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz_1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'vae' is not defined"
      ]
     }
    ],
