--- a/01_VAE_original/plotting_simils_sample.ipynb
+++ b/01_VAE_original/plotting_simils_sample.ipynb
@@ -1,16 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
-    "## Load libraries"
+    "## Setup"
    ],
    "metadata": {}
   },
@@ -73,37 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "vae = VAEUtils(directory='models/zinc_properties')"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "From C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1210: calling reduce_prod (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n",
-      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\keras\\models.py:245: UserWarning: No training configuration found in save file: the model was *not* compiled. Compile it manually.\n",
-      "  warnings.warn('No training configuration found in save file: '\n",
-      "From C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1192: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n",
-      "From C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1156: calling reduce_max (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Using standarized functions? True\n",
-      "Standarization: estimating mu and std values ...done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -182,8 +149,7 @@
    "execution_count": 51,
    "source": [
     "mol = Chem.MolFromSmiles('N[C@@H](CC1=CNC=N1)C(O)=O')\r\n",
-    "fp = Chem.RDKFingerprint(mol) \r\n",
-    "# print( [ int(char) for char in fp.ToBitString() ] )"
+    "fp = Chem.RDKFingerprint(mol) "
    ],
    "outputs": [],
    "metadata": {}
