--- a/plotting_smiles.ipynb
+++ b/plotting_smiles.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "# tensorflow backend\r\n",
     "print('tensorflow backend')\r\n",
@@ -44,44 +44,7 @@
     "\r\n",
     "import pandas as pd"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "tensorflow backend\n",
-      "vae stuff\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "Using TensorFlow backend.\n",
-      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:523: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:524: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:532: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "iport scientific py\n",
-      "rdkit stuff\n",
-      "plotting stuff\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -93,37 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "vae = VAEUtils(directory='models/zinc_properties')"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "From C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1210: calling reduce_prod (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n",
-      "C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\keras\\models.py:245: UserWarning: No training configuration found in save file: the model was *not* compiled. Compile it manually.\n",
-      "  warnings.warn('No training configuration found in save file: '\n",
-      "From C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1192: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n",
-      "From C:\\Users\\PC\\.conda\\envs\\01_chemvae\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1156: calling reduce_max (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Using standarized functions? True\n",
-      "Standarization: estimating mu and std values ...done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -141,7 +78,7 @@
     "smiles_group = []\r\n",
     "is_count = 0\r\n",
     "is_not_count = 0\r\n",
-    "df = pd.read_csv('./ask1_smiles.csv')\r\n",
+    "df = pd.read_csv('./data/ask1_smiles.csv')\r\n",
     "df.drop(['index'], axis=1, inplace=True)\r\n",
     "for i in range(len(df)):\r\n",
     "    if(df.loc[i, 'smiles'].find('.') == -1 and df.loc[i, 'smiles'].find('i') == -1):\r\n",
@@ -193,31 +130,31 @@
     "    Zs = [ list(vae.encode(X)[0]) for X in Xs ]\r\n",
     "    latent_group.extend(list(zip(Zs, [ data[1] for data in smiles_group ])))\r\n",
     "    \r\n",
-    "    # mols = [ Chem.MolFromSmiles(smiles) for smiles in smiles_list ]\r\n",
+    "    mols = [ Chem.MolFromSmiles(smiles) for smiles in smiles_list ]\r\n",
     "\r\n",
-    "    # # rdk fp\r\n",
-    "    # print('\\r(2/5) encoding rdk fp...')\r\n",
-    "    # fps = [ Chem.RDKFingerprint(mol) for mol in mols ]\r\n",
-    "    # fpBits = [ [ int(char) for char in fp.ToBitString() ] for fp in fps ]\r\n",
-    "    # rdk_fp_group.extend(list(zip(fpBits, [ data[1] for data in smiles_group ])))\r\n",
+    "    # rdk fp\r\n",
+    "    print('\\r(2/5) encoding rdk fp...')\r\n",
+    "    fps = [ Chem.RDKFingerprint(mol) for mol in mols ]\r\n",
+    "    fpBits = [ [ int(char) for char in fp.ToBitString() ] for fp in fps ]\r\n",
+    "    rdk_fp_group.extend(list(zip(fpBits, [ data[1] for data in smiles_group ])))\r\n",
     "\r\n",
-    "    # # pattern fp\r\n",
-    "    # print('\\r(3/5) encoding pattern fp...')\r\n",
-    "    # fps = [ Chem.PatternFingerprint(mol) for mol in mols ]\r\n",
-    "    # fpBits = [ [ int(char) for char in fp.ToBitString() ] for fp in fps ]\r\n",
-    "    # pattern_fp_group.extend(list(zip(fpBits, [ data[1] for data in smiles_group ])))\r\n",
+    "    # pattern fp\r\n",
+    "    print('\\r(3/5) encoding pattern fp...')\r\n",
+    "    fps = [ Chem.PatternFingerprint(mol) for mol in mols ]\r\n",
+    "    fpBits = [ [ int(char) for char in fp.ToBitString() ] for fp in fps ]\r\n",
+    "    pattern_fp_group.extend(list(zip(fpBits, [ data[1] for data in smiles_group ])))\r\n",
     "\r\n",
-    "    # # layered fp\r\n",
-    "    # print('\\r(4/5) encoding layered fp...')\r\n",
-    "    # fps = [ Chem.LayeredFingerprint(mol) for mol in mols ]\r\n",
-    "    # fpBits = [ [ int(char) for char in fp.ToBitString() ] for fp in fps ]\r\n",
-    "    # layered_fp_group.extend(list(zip(fpBits, [ data[1] for data in smiles_group ])))\r\n",
+    "    # layered fp\r\n",
+    "    print('\\r(4/5) encoding layered fp...')\r\n",
+    "    fps = [ Chem.LayeredFingerprint(mol) for mol in mols ]\r\n",
+    "    fpBits = [ [ int(char) for char in fp.ToBitString() ] for fp in fps ]\r\n",
+    "    layered_fp_group.extend(list(zip(fpBits, [ data[1] for data in smiles_group ])))\r\n",
     "\r\n",
-    "    # # MACCSKeys fp\r\n",
-    "    # print('\\r(5/5) encoding layered fp...')\r\n",
-    "    # fps = [ Chem.GetMACCSKeysFingerprint(mol) for mol in mols ]\r\n",
-    "    # fpBits = [ [ int(char) for char in fp.ToBitString() ] for fp in fps ]\r\n",
-    "    # MACCSKeys_fp_group.extend(list(zip(fpBits, [ data[1] for data in smiles_group ])))"
+    "    # MACCSKeys fp\r\n",
+    "    print('\\r(5/5) encoding layered fp...')\r\n",
+    "    fps = [ Chem.GetMACCSKeysFingerprint(mol) for mol in mols ]\r\n",
+    "    fpBits = [ [ int(char) for char in fp.ToBitString() ] for fp in fps ]\r\n",
+    "    MACCSKeys_fp_group.extend(list(zip(fpBits, [ data[1] for data in smiles_group ])))"
    ],
    "outputs": [],
    "metadata": {}
@@ -265,17 +202,17 @@
     "df = pd.DataFrame(latent_group)\r\n",
     "df.to_csv('./data/latent_group.csv')\r\n",
     "\r\n",
-    "# df = pd.DataFrame(rdk_fp_group)\r\n",
-    "# df.to_csv('./data/rdk_fp_group.csv')\r\n",
+    "df = pd.DataFrame(rdk_fp_group)\r\n",
+    "df.to_csv('./data/rdk_fp_group.csv')\r\n",
     "\r\n",
-    "# df = pd.DataFrame(pattern_fp_group)\r\n",
-    "# df.to_csv('./data/pattern_fp_group.csv')\r\n",
+    "df = pd.DataFrame(pattern_fp_group)\r\n",
+    "df.to_csv('./data/pattern_fp_group.csv')\r\n",
     "\r\n",
-    "# df = pd.DataFrame(layered_fp_group)\r\n",
-    "# df.to_csv('./data/layered_fp_group.csv')\r\n",
+    "df = pd.DataFrame(layered_fp_group)\r\n",
+    "df.to_csv('./data/layered_fp_group.csv')\r\n",
     "\r\n",
-    "# df = pd.DataFrame(MACCSKeys_fp_group)\r\n",
-    "# df.to_csv('./data/MACCKeys_fp_group.csv')\r\n",
+    "df = pd.DataFrame(MACCSKeys_fp_group)\r\n",
+    "df.to_csv('./data/MACCKeys_fp_group.csv')\r\n",
     "\r\n",
     "# take about 60s."
    ],
@@ -377,59 +314,59 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
-    "# print('\\r(1/10) {:30s}'.format('training latent tsne...'))\r\n",
-    "# points_latent_tsne = model_tsne.fit_transform([ points[0] for points in latent_group ])\r\n",
-    "# df = pd.DataFrame(points_latent_tsne)\r\n",
-    "# df.to_csv('./data/points_latent_tsne.csv')\r\n",
+    "print('\\r(1/10) {:30s}'.format('training latent tsne...'))\r\n",
+    "points_latent_tsne = model_tsne.fit_transform([ points[0] for points in latent_group ])\r\n",
+    "df = pd.DataFrame(points_latent_tsne)\r\n",
+    "df.to_csv('./data/points_latent_tsne.csv')\r\n",
     "\r\n",
-    "# print('\\r(2/10) {:30s}'.format('training latent pca...'))\r\n",
-    "# points_latent_pca = model_pca.fit_transform([ points[0] for points in latent_group ])\r\n",
-    "# df = pd.DataFrame(points_latent_pca)\r\n",
-    "# df.to_csv('./data/points_latent_pca.csv')\r\n",
+    "print('\\r(2/10) {:30s}'.format('training latent pca...'))\r\n",
+    "points_latent_pca = model_pca.fit_transform([ points[0] for points in latent_group ])\r\n",
+    "df = pd.DataFrame(points_latent_pca)\r\n",
+    "df.to_csv('./data/points_latent_pca.csv')\r\n",
     "\r\n",
-    "# print('\\r(3/10) {:30s}'.format('training rdk fingerprint tsne...'))\r\n",
-    "# points_rdk_fp_tsne = model_tsne.fit_transform([ points[0] for points in rdk_fp_group ])\r\n",
-    "# df = pd.DataFrame(points_rdk_fp_tsne)\r\n",
-    "# df.to_csv('./data/points_rdk_fp_tsne.csv')\r\n",
-    "\r\n",
-    "\r\n",
-    "# print('\\r(4/10) {:30s}'.format('training rdk fingerprint pca...'))\r\n",
-    "# points_rdk_fp_pca = model_pca.fit_transform([ points[0] for points in rdk_fp_group ])\r\n",
-    "# df = pd.DataFrame(points_rdk_fp_pca)\r\n",
-    "# df.to_csv('./data/points_rdk_fp_pca.csv')\r\n",
-    "\r\n",
-    "# print('\\r(5/10) {:30s}'.format('training pattern fingerprint tsne...'))\r\n",
-    "# points_pattern_fp_tsne = model_tsne.fit_transform([ points[0] for points in pattern_fp_group ])\r\n",
-    "# df = pd.DataFrame(points_pattern_fp_tsne)\r\n",
-    "# df.to_csv('./data/points_pattern_fp_tsne.csv')\r\n",
-    "\r\n",
-    "# print('\\r(6/10) {:30s}'.format('training pattern fingerprint pca...'))\r\n",
-    "# points_pattern_fp_pca = model_pca.fit_transform([ points[0] for points in pattern_fp_group ])\r\n",
-    "# df = pd.DataFrame(points_pattern_fp_pca)\r\n",
-    "# df.to_csv('./data/points_pattern_fp_pca.csv')\r\n",
-    "\r\n",
-    "# print('\\r(7/10) {:30s}'.format('training layered fingerprint tsne...'))\r\n",
-    "# points_layered_fp_tsne = model_tsne.fit_transform([ points[0] for points in layered_fp_group ])\r\n",
-    "# df = pd.DataFrame(points_layered_fp_tsne)\r\n",
-    "# df.to_csv('./data/points_layered_fp_tsne.csv')\r\n",
-    "\r\n",
-    "# print('\\r(8/10) {:30s}'.format('training layered fingerprint pca...'))\r\n",
-    "# points_layered_fp_pca = model_pca.fit_transform([ points[0] for points in layered_fp_group ])\r\n",
-    "# df = pd.DataFrame(points_layered_fp_pca)\r\n",
-    "# df.to_csv('./data/points_layered_fp_pca.csv')\r\n",
-    "\r\n",
-    "# print('\\r(9/10) {:30s}'.format('training MACCSKeys fingerprint tsne...'))\r\n",
-    "# points_MACCSKeys_fp_tsne = model_tsne.fit_transform([ points[0] for points in MACCSKeys_fp_group ])\r\n",
-    "# df = pd.DataFrame(points_MACCSKeys_fp_tsne)\r\n",
-    "# df.to_csv('./data/points_MACCSKeys_fp_tsne.csv')\r\n",
-    "\r\n",
-    "# print('\\r(10/10) {:30s}'.format('training MACCSKeys fingerprint pca...'))\r\n",
-    "# points_MACCSKeys_fp_pca = model_pca.fit_transform([ points[0] for points in MACCSKeys_fp_group ])\r\n",
-    "# df = pd.DataFrame(points_MACCSKeys_fp_pca)\r\n",
-    "# df.to_csv('./data/points_MACCSKeys_fp_pca.csv')\r\n",
+    "print('\\r(3/10) {:30s}'.format('training rdk fingerprint tsne...'))\r\n",
+    "points_rdk_fp_tsne = model_tsne.fit_transform([ points[0] for points in rdk_fp_group ])\r\n",
+    "df = pd.DataFrame(points_rdk_fp_tsne)\r\n",
+    "df.to_csv('./data/points_rdk_fp_tsne.csv')\r\n",
     "\r\n",
     "\r\n",
-    "# takes about 1200s."
+    "print('\\r(4/10) {:30s}'.format('training rdk fingerprint pca...'))\r\n",
+    "points_rdk_fp_pca = model_pca.fit_transform([ points[0] for points in rdk_fp_group ])\r\n",
+    "df = pd.DataFrame(points_rdk_fp_pca)\r\n",
+    "df.to_csv('./data/points_rdk_fp_pca.csv')\r\n",
+    "\r\n",
+    "print('\\r(5/10) {:30s}'.format('training pattern fingerprint tsne...'))\r\n",
+    "points_pattern_fp_tsne = model_tsne.fit_transform([ points[0] for points in pattern_fp_group ])\r\n",
+    "df = pd.DataFrame(points_pattern_fp_tsne)\r\n",
+    "df.to_csv('./data/points_pattern_fp_tsne.csv')\r\n",
+    "\r\n",
+    "print('\\r(6/10) {:30s}'.format('training pattern fingerprint pca...'))\r\n",
+    "points_pattern_fp_pca = model_pca.fit_transform([ points[0] for points in pattern_fp_group ])\r\n",
+    "df = pd.DataFrame(points_pattern_fp_pca)\r\n",
+    "df.to_csv('./data/points_pattern_fp_pca.csv')\r\n",
+    "\r\n",
+    "print('\\r(7/10) {:30s}'.format('training layered fingerprint tsne...'))\r\n",
+    "points_layered_fp_tsne = model_tsne.fit_transform([ points[0] for points in layered_fp_group ])\r\n",
+    "df = pd.DataFrame(points_layered_fp_tsne)\r\n",
+    "df.to_csv('./data/points_layered_fp_tsne.csv')\r\n",
+    "\r\n",
+    "print('\\r(8/10) {:30s}'.format('training layered fingerprint pca...'))\r\n",
+    "points_layered_fp_pca = model_pca.fit_transform([ points[0] for points in layered_fp_group ])\r\n",
+    "df = pd.DataFrame(points_layered_fp_pca)\r\n",
+    "df.to_csv('./data/points_layered_fp_pca.csv')\r\n",
+    "\r\n",
+    "print('\\r(9/10) {:30s}'.format('training MACCSKeys fingerprint tsne...'))\r\n",
+    "points_MACCSKeys_fp_tsne = model_tsne.fit_transform([ points[0] for points in MACCSKeys_fp_group ])\r\n",
+    "df = pd.DataFrame(points_MACCSKeys_fp_tsne)\r\n",
+    "df.to_csv('./data/points_MACCSKeys_fp_tsne.csv')\r\n",
+    "\r\n",
+    "print('\\r(10/10) {:30s}'.format('training MACCSKeys fingerprint pca...'))\r\n",
+    "points_MACCSKeys_fp_pca = model_pca.fit_transform([ points[0] for points in MACCSKeys_fp_group ])\r\n",
+    "df = pd.DataFrame(points_MACCSKeys_fp_pca)\r\n",
+    "df.to_csv('./data/points_MACCSKeys_fp_pca.csv')\r\n",
+    "\r\n",
+    "\r\n",
+    "# takes about 12000s."
    ],
    "outputs": [],
    "metadata": {}
