Seperate ask1 and mao dataset

--- a/ask1_data_preprocess.ipynb
+++ b/ask1_data_preprocess.ipynb
@@ -31,7 +31,7 @@
     "def set_activity(S):\r\n",
     "    return \"1\"\r\n",
     "\r\n",
-    "data = pd.read_csv(\"./ask1_processed.csv\")\r\n",
+    "data = pd.read_csv(\"./data/ask1/ask1_processed.csv\")\r\n",
     "data = pd.DataFrame(data, columns=['PUBCHEM_RESULT_TAG', 'PUBCHEM_CID', 'PUBCHEM_ACTIVITY_OUTCOME'])\r\n",
     "group = []\r\n",
     "max_len = 0\r\n",
@@ -61,7 +61,7 @@
     "df = pd.DataFrame(group)\r\n",
     "df = pd.DataFrame(group, columns=['smiles', 'index'])\r\n",
     "df.index = range(1, len(group) + 1) \r\n",
-    "df.to_csv('ask1_smiles.csv', encoding='euc-kr')\r\n",
+    "df.to_csv('./data/ask1/ask1_smiles.csv', encoding='euc-kr')\r\n",
     "print(df)"
    ],
    "outputs": [
@@ -89,7 +89,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "df = pd.read_csv('./ask1_smiles.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/ask1_smiles.csv')\r\n",
     "# df.loc['smiles':'activation'][:]\r\n",
     "df.drop(['index'], axis=1, inplace=True)\r\n",
     "df.head() "
