--- a/ask1_latent_extractor.ipynb
+++ b/ask1_latent_extractor.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "print('(0/10) fetching latent space group...')\r\n",
     "latent_group = []\r\n",
-    "df = pd.read_csv('./data/latent_group.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/latent_group.csv')\r\n",
     "df.drop(['0'], axis=1, inplace=True)\r\n",
     "for i in range(len(df)):\r\n",
     "    points = list(map(float, df.loc[i, '1'].strip('[]').split(', ')))\r\n",
@@ -43,61 +43,61 @@
     "\r\n",
     "print('(1/10) fetching latent space tsne points...')\r\n",
     "points_latent_tsne = []\r\n",
-    "df = pd.read_csv('./data/points_latent_tsne.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_latent_tsne.csv')\r\n",
     "for i in range(len(df)):\\\r\n",
     "    points_latent_tsne.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "\r\n",
     "print('(2/10) fetching latent space pca points...')\r\n",
     "points_latent_pca = []\r\n",
-    "df = pd.read_csv('./data/points_latent_pca.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_latent_pca.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_latent_pca.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "\r\n",
     "print('(3/10) fetching rdk fingerprint tsne points...')\r\n",
     "points_rdk_fp_tsne = []\r\n",
-    "df = pd.read_csv('./data/points_rdk_fp_tsne.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_rdk_fp_tsne.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_rdk_fp_tsne.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "    \r\n",
     "print('(4/10) fetching rdk fingerprint pca points...')\r\n",
     "points_rdk_fp_pca = []\r\n",
-    "df = pd.read_csv('./data/points_rdk_fp_pca.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_rdk_fp_pca.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_rdk_fp_pca.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "\r\n",
     "print('(5/10) fetching pattern fingerprint tsne points...')\r\n",
     "points_pattern_fp_tsne = []\r\n",
-    "df = pd.read_csv('./data/points_pattern_fp_tsne.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_pattern_fp_tsne.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_pattern_fp_tsne.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "    \r\n",
     "print('(6/10) fetching pattern fingerprint pca points...')\r\n",
     "points_pattern_fp_pca = []\r\n",
-    "df = pd.read_csv('./data/points_pattern_fp_pca.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_pattern_fp_pca.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_pattern_fp_pca.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "\r\n",
     "print('(7/10) fetching layered fingerprint tsne points...')\r\n",
     "points_layered_fp_tsne = []\r\n",
-    "df = pd.read_csv('./data/points_layered_fp_tsne.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_layered_fp_tsne.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_layered_fp_tsne.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "    \r\n",
     "print('(8/10) fetching layered fingerprint pca points...')\r\n",
     "points_layered_fp_pca = []\r\n",
-    "df = pd.read_csv('./data/points_layered_fp_pca.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_layered_fp_pca.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_layered_fp_pca.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "\r\n",
     "print('(9/10) fetching MACCSKeys fingerprint tsne points...')\r\n",
     "points_MACCSKeys_fp_tsne = []\r\n",
-    "df = pd.read_csv('./data/points_MACCSKeys_fp_tsne.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_MACCSKeys_fp_tsne.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_MACCSKeys_fp_tsne.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))\r\n",
     "    \r\n",
     "print('(10/10) fetching MACCSKeys fingerprint pca points...')\r\n",
     "points_MACCSKeys_fp_pca = []\r\n",
-    "df = pd.read_csv('./data/points_MACCSKeys_fp_pca.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/points_MACCSKeys_fp_pca.csv')\r\n",
     "for i in range(len(df)):\r\n",
     "    points_MACCSKeys_fp_pca.append(list(map(float, [df.loc[i, '0'], df.loc[i, '1']])))"
    ],
@@ -350,7 +350,7 @@
     "smiles_group = []\r\n",
     "is_count = 0\r\n",
     "is_not_count = 0\r\n",
-    "df = pd.read_csv('./data/ask1_smiles.csv')\r\n",
+    "df = pd.read_csv('./data/ask1/ask1_smiles.csv')\r\n",
     "df.drop(['index'], axis=1, inplace=True)\r\n",
     "for i in range(len(df)):\r\n",
     "    if(df.loc[i, 'smiles'].find('.') == -1 and df.loc[i, 'smiles'].find('i') == -1):\r\n",
