Add mao plotting model

--- a/mao_data_preprocess.ipynb
+++ b/mao_data_preprocess.ipynb
@@ -1,38 +1,109 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "source": [
-    "from rdkit import Chem"
+    "## Setup"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "from rdkit.Chem import SDMolSupplier, MolToSmiles\r\n",
+    "import pandas as pd"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "source": [
-    "maoData = Chem.SDMolSupplier('data/mao/maoAct.sd')\r\n",
-    "asinexData = Chem.SDMolSupplier('data/mao/newasinex.sd')\r\n",
+    "## Preprocess dataset"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "source": [
+    "maoData = SDMolSupplier('data/mao/maoAct.sd')\r\n",
+    "asinexData = SDMolSupplier('data/mao/newasinex.sd')\r\n",
     "count = 0\r\n",
-    "for i, mol in enumerate(maoData):\r\n",
-    "    if '.' in Chem.MolToSmiles(mol):\r\n",
+    "active_mao_count = 0\r\n",
+    "\r\n",
+    "mao_smiles = []\r\n",
+    "for mol in maoData:\r\n",
+    "    if '.' in MolToSmiles(mol):\r\n",
     "        count += 1\r\n",
-    "print('# of maoData :', len(maoData))\r\n",
-    "print('invalid target :', count)\r\n",
-    "print('# of asinexData :', len(asinexData))\r\n",
-    "# for i, mol in enumerate(asinexData):\r\n",
-    "#     print(i+1, Chem.MolToSmiles(mol))\r\n"
+    "    else:\r\n",
+    "        activity = 1 if int(mol.GetProp('Activity')) > 1 else 0\r\n",
+    "        mao_smiles.append((MolToSmiles(mol), activity))\r\n",
+    "        active_mao_count += activity\r\n",
+    "pd.DataFrame(mao_smiles).to_csv('./data/mao/mao_smiles.csv')\r\n",
+    "print('# of mao data :', len(maoData))\r\n",
+    "print('# of valid mao data :', len(mao_smiles))\r\n",
+    "print('# of invalid mao data :', count)\r\n",
+    "print('# of valid active mao data :', active_mao_count)\r\n",
+    "\r\n",
+    "print()\r\n",
+    "\r\n",
+    "count = 0\r\n",
+    "asinex_smiles = []\r\n",
+    "for mol in asinexData:\r\n",
+    "    if mol == None:\r\n",
+    "        count += 1\r\n",
+    "    elif '.' in MolToSmiles(mol):\r\n",
+    "        count += 1\r\n",
+    "    else:\r\n",
+    "        asinex_smiles.append((MolToSmiles(mol), 0))\r\n",
+    "pd.DataFrame(asinex_smiles).to_csv('./data/mao/asinex_smiles.csv')\r\n",
+    "print('# of asinex data :', len(asinexData))\r\n",
+    "print('# of valid data :', len(asinexData) - count)\r\n",
+    "print('# of valid data :', len(asinex_smiles))\r\n",
+    "print('# of inavlid data :', count)\r\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "# of maoData : 1650\n",
-      "invalid target : 468\n",
-      "# of asinexData : 137799\n"
+      "# of mao data : 1650\n",
+      "# of valid mao data : 1182\n",
+      "# of invalid mao data : 468\n",
+      "# of valid active mao data : 102\n",
+      "\n",
+      "# of asinex data : 137799\n",
+      "# of valid data : 137735\n",
+      "# of valid data : 137735\n",
+      "# of inavlid data : 64\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "source": [
+    "max_len = 0\r\n",
+    "for mol in mao_smiles:\r\n",
+    "    max_len = max(len(mol[0]), max_len)\r\n",
+    "print('max len in mao :', max_len)\r\n",
+    "\r\n",
+    "max_len = 0\r\n",
+    "for mol in asinex_smiles:\r\n",
+    "    max_len = max(len(mol[0]), max_len)\r\n",
+    "print('max len in asinex :', max_len)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "max len in mao : 122\n",
+      "max len in asinex : 241\n"
      ]
     }
    ],
