Plot batched mao latent space, fingerprint

--- a/mao_plotting_smiles.ipynb
+++ b/mao_plotting_smiles.ipynb
@@ -323,10 +323,10 @@
    "cell_type": "code",
    "execution_count": 47,
    "source": [
-    "# print('\\r(1/2) {:30s}'.format('training latent pca...'))\r\n",
-    "# points_latent_pca = model_pca.fit_transform([ points[0] for points in latent_group ])\r\n",
-    "# df = pd.DataFrame(points_latent_pca)\r\n",
-    "# df.to_csv('./data/mao/points_latent_pca.csv')\r\n",
+    "print('\\r(1/2) {:30s}'.format('training latent pca...'))\r\n",
+    "points_latent_pca = model_pca.fit_transform([ points[0] for points in latent_group ])\r\n",
+    "df = pd.DataFrame(points_latent_pca)\r\n",
+    "df.to_csv('./data/mao/points_latent_pca.csv')\r\n",
     "\r\n",
     "print('\\r(2/2) {:30s}'.format('training latent tsne...'))\r\n",
     "points_latent_tsne = model_tsne.fit_transform([ points[0] for points in latent_group ])\r\n",
@@ -360,23 +360,6 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "print(list(zip([1, 2, 3], [4, 5, 6], [7, 8, 9])))"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[(1, 4, 7), (2, 5, 8), (3, 6, 9)]\n"
-     ]
-    }
-   ],
    "metadata": {}
   },
   {
