Save valid output in MACCSKeys tsne

--- a/aryl_ether_plotting_smiles.ipynb
+++ b/aryl_ether_plotting_smiles.ipynb
@@ -1385,13 +1385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 117,
    "source": [
     "valid_output = []\r\n",
     "\r\n",
     "for i in range(len(index)):\r\n",
     "    if labels[i] == 0 or labels[i] == 2 or labels[i] == 4:\r\n",
-    "        valid_output.append(aryl_ether_smiles[index[i]][2])\r\n",
+    "        # valid_output.append(aryl_ether_smiles[index[i]][2])\r\n",
+    "        valid_output.append(index[i])\r\n",
     "\r\n",
     "df = pd.DataFrame(valid_output)\r\n",
     "df.to_csv('./data/aryl_ether/valid_output.csv')\r\n",
