Add implement modules

--- a/implement.ipynb
+++ b/implement.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Setup proejct"
@@ -51,20 +44,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "source": [
-    "# import modules\r\n",
-    "#\r\n",
-    "# number = int(input('enter a number of data'))\r\n",
-    "# fetch_sd(project, number)"
+    "# from implements.fetcher import fetch_sd\r\n",
+    "\r\n",
+    "# number = int(input('enter a number of data')) \r\n",
+    "# print(dir(fetcher))\r\n",
+    "# # fetcher.fetch_sd(project, number)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__']\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## (option 2) Fetch data from *.csv"
+    "## (option 2) Fetch data from *.csv\r\n",
+    "* need 'smiles.csv' with columns 'smiles, label'"
    ],
    "metadata": {}
   },
@@ -72,7 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# from implements import fetch_csv\r\n",
+    "# from implements.fetcher import fetch_csv\r\n",
     "#\r\n",
     "# fetch_csv(project)"
    ],
@@ -102,7 +105,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Fetch external latent space & fingerprints"
+    "## Fetch external latent space & fingerprints\r\n",
+    "* need 'external_points_latent_space.csv' or 'external_points_(fingerprint)_fp_csv'"
    ],
    "metadata": {}
   },
@@ -110,8 +114,11 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# from implements.encoder import fetch_latent_space\r\n",
-    "# from implements.encoder import fetch_fingerprints"
+    "# from implements.fetcher import fetch_latent_space\r\n",
+    "# from implements.fetcher import fetch_fingerprints\r\n",
+    "#\r\n",
+    "# fetch_latent_space(project)\r\n",
+    "# fetch_latent_fingerprints(project)"
    ],
    "outputs": [],
    "metadata": {}
@@ -125,11 +132,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "source": [
-    "# check gpu available"
+    "# from tensorflow.python.client import device_lib\r\n",
+    "# print(device_lib.list_local_devices())"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 5433811192048871964\n",
+      "]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -143,7 +165,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "source": [
-    "# from implements.learn_tsne_pca import learn_tsne_pca\r\n",
+    "# from implements.encoder import learn_tsne_pca\r\n",
     "#\r\n",
     "# learn_tsne_pca(project)"
    ],
@@ -161,7 +183,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# from implements.plot_molecules import plot_molecules\r\n",
+    "# from implements.plotter import plot_molecules\r\n",
     "#\r\n",
     "# plot_molecules(project)"
    ],
@@ -179,7 +201,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# from implements.cluster import cluster, plot, display, export\r\n",
+    "# from implements.plotter import cluster, plot, display, export\r\n",
     "#\r\n",
     "# sel = input('select graph to be clustered')\r\n",
     "# clustered = cluster(project, sel) # cluster, plot, display"
@@ -198,7 +220,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# from implements.cluster import export_molecules\r\n",
+    "# from implements.plotter import export_molecules\r\n",
     "#\r\n",
     "# sel = list(map(int, input('enter label numbers to export').split(' ')))\r\n",
     "# export_molecules(project, clustered, sel)"
